--- a/frontend/style.css
+++ b/frontend/style.css
@@ -8,7 +8,11 @@ body{
     background-image: url(images/18973628.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: top;
+    background-position: center;
+    background-attachment: fixed;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
     margin: 0;
     padding: 0;
     color: white;
