--- a/frontend/style.css
+++ b/frontend/style.css
@@ -12,7 +12,7 @@ body{
     background-attachment: fixed;
     height: 100%;
     width: 100%;
-    overflow: hidden;
+    overflow: scroll;
     margin: 0;
     padding: 0;
     color: white;
